--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:tunnel": "concurrently \"yarn dev\" \"yarn tunnel\"",
+    "tunnel": "cloudflared tunnel --config C:\\Users\\fujitsu\\.cloudflared\\config.yml run",
     "build": "vite build",
     "preview": "vite preview",
+    "preview:tunnel": "concurrently \"yarn preview\" \"yarn tunnel\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
@@ -14,6 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.1.2",
     "eslint": "^8.55.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
